# tello_gesture_steering

./: LICENSE  README.md
gesture_steering/: CMakeLists.txt  package.xml
gesture_steering/config/: movement_params.yaml  no_flips.yaml  steering_params.yaml
gesture_steering/launch/: gesture_steering.launch.xml  movement_steering.launch.xml
gesture_steering/models/: 10_class_better_data.tflite  static_gest_model.tflite
gesture_steering/notebooks/: gesture-recognition.ipynb
gesture_steering/scripts/: data_generator.py  gesture_steering  hand_mask_recorder  hand_tracking.py  math_gesture_interpreter.py  movement_steering
tello_bringup/: CMakeLists.txt  package.xml
tello_bringup/config/: video_params.yaml
tello_bringup/launch/: base_setup.launch.xml
tello_bringup/scripts/: base_topics_handler  image_saver
tello_bringup/src/: video_interface.cpp
tello_teleop/: CMakeLists.txt  package.xml
tello_teleop/config/: joy_mapping_ps4.yaml
tello_teleop/launch/: joy_teleop.launch.xml
tello_teleop/scripts/: tello_joy_teleop
